# observability-platform

./: .gitignore  README.md
alloy-multi-product-stack/: config-audit.alloy  config.alloy  docker-compose.yml  loki-config.yaml  metrics-scraper-config.alloy  mimir.yaml  otel-collector-config.yaml  profile-scraper-config.alloy  prometheus.yml  tempo.yml  test.alloy  vector.yaml
driver-app/: .env.template  .gitlab-ci.yml  Dockerfile  README.md  package-lock.json  package.json
driver-app-2/: .dockerignore  .env.template  .mega-linter.yml  .prettierrc  package-lock.json  package.json  tsconfig.json
driver-app-2/src/: index.ts
driver-app-esm/: .eslintignore  .eslintrc  .gitignore  .npmignore  Dockerfile  audit-log.txt  deployment.yaml  package-lock.json  package.json  tsconfig.json
fastapi-app/: Dockerfile  pyproject.toml
fastapi-app/src/: main.py
fastapi-app/src/service/: user_service.py
fastapi-app/tests/: k6.js
frontend-app/: package-lock.json  package.json
helm-deploy/: alloy-values.yaml  grafana-pvc.yaml  grafana-values.yaml  loki-minio.yaml  loki-values.yaml  mimir-values.yaml  minio-values.yaml  tempo-values.yaml  vector-values.yaml
obs-api-server-1-stack/: docker-compose.yml  otel-collector-config.yaml  runner_script.py
obs-api-server-2-stack/: docker-compose.yml  otel-collector-config.yaml
obs-main-stack/: .gitignore  docker-compose.yml  loki-config.yaml  opensearch.yml  otel-collector-config.yaml  prometheus.yml  prometheus_web.yml  promtail-config.yaml  vector.yaml
otel-multi-product-stack/: docker-compose-otel.yml  docker-compose.yml
(+53 files in other folders)
